# card10-firmware

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  card10-cross.ini  meson.build  requirements.txt
Documentation/: card10-cfg.rst  conf.py  index.rst
Documentation/bluetooth/: card10.rst  nimble.rst
Documentation/epicardium/: mutex.rst
Documentation/pycardium/: bhi160.rst  color.rst  os.rst  stdlib.rst  utime.rst
Hello_World/: Makefile  main.c
ble/: fit_main.c
bootloader/: bootloader-display.c  build_multi_image.sh  crc_patch.py
epicardium/: FreeRTOSConfig.h  epicardium.h  main.c  meson.build  support.c  version-splash.h
epicardium/api/: caller.c  common.h  control.c  dispatcher.c  interrupt-sender.c
epicardium/ble/: ble.c  ble_main.c  card10.c  uart.c
epicardium/ble/app/common/: app_db.c  app_ui.c
epicardium/fs/: filesystem_fat.c
epicardium/l0der/: l0der.c
epicardium/modules/: bhi.c  bme680.c  bsec.c  buttons.c  config.c  config.h  dispatcher.c  display.c  gpio.c  hardware.c  hw-lock.c  i2c.c  leds.c  lifecycle.c  light_sensor.c  max30001.c  meson.build  modules.h  mutex.c  mutex.h  panic.c  personal_state.c  pmic.c  serial.c  sleep.c  stream.c  stream.h  ws2812.c
hw-tests/: meson.build
hw-tests/api-demo/: genapi.py
hw-tests/bootloader-update/: bootloader-9a0d158.h  main.c
hw-tests/dual-core/: core1.c  main.c
hw-tests/ecgtest/: main.c
hw-tests/fundamental-test/: main.c  meson.build
hw-tests/harmonictest/: main.c  meson.build
hw-tests/hello-world/: main.c
lib/: meson.build
lib/card10/: bomb.c  bomb.h  card10.c  faultscreen.c  faultscreen.h  faultsplash.c  faultsplash.h  meson.build  pb.c  portexpander.c
lib/ff13/: meson.build
lib/gfx/: framebuffer.c  gfx.c  gfx.h  textbuffer.c  textbuffer.h
lib/gfx/Fonts/: font12.c  font16.c  font20.c
lib/micropython/: meson.build
lib/sdk/: changes.txt  meson.build
lib/sdk/Applications/EvKitExamples/AES/: main.c
lib/sdk/Applications/EvKitExamples/BLE_beacon/: main.c
lib/sdk/Applications/EvKitExamples/BLE_datc/: datc_main.c  stack_datc.c
lib/sdk/Applications/EvKitExamples/BLE_dats/: dats_main.c  stack_dats.c
lib/sdk/Applications/EvKitExamples/BLE_fit/: Makefile  fit_main.c  main.c  stack_fit.c
lib/sdk/Applications/EvKitExamples/BLE_fit_ds/: .cproject  .project  BLE_fit_ds.launch  Makefile  fit_main.c  main.c  stack_fit.c  wakeup.c  wakeup.h
lib/sdk/Applications/EvKitExamples/BLE_hci_uart/: stack_setup.c
lib/sdk/Applications/EvKitExamples/CRC/: main.c
lib/sdk/Applications/EvKitExamples/DMA/: main.c
lib/sdk/Applications/EvKitExamples/ECC/: main.c
lib/sdk/Applications/EvKitExamples/Flash/: Makefile  main.c
lib/sdk/Applications/EvKitExamples/FreeRTOSDemo/: FreeRTOSDemo.launch
lib/sdk/Applications/EvKitExamples/GPIO/: main.c
lib/sdk/Applications/EvKitExamples/HTMR/: main.c
lib/sdk/Applications/EvKitExamples/I2C/: main.c
lib/sdk/Applications/EvKitExamples/ICC/: Makefile  main.c
lib/sdk/Applications/EvKitExamples/LCD/: Makefile  main.c
lib/sdk/Applications/EvKitExamples/LP/: Makefile
lib/sdk/Applications/EvKitExamples/MAA/: main.c
lib/sdk/Applications/EvKitExamples/OWM/: Makefile
lib/sdk/Applications/EvKitExamples/Pulse_Train/: main.c
lib/sdk/Applications/EvKitExamples/RTC/: main.c
lib/sdk/Applications/EvKitExamples/SDHC_Raw/: main.c
lib/sdk/Applications/EvKitExamples/SPI/: main.c
lib/sdk/Applications/EvKitExamples/SPIXF/: Makefile  main.c  ramfunc.c
lib/sdk/Applications/EvKitExamples/SPIXR/: main.c
lib/sdk/Applications/EvKitExamples/Semaphore/: main.c
lib/sdk/Applications/EvKitExamples/TMR/: Makefile  main.c
lib/sdk/Applications/EvKitExamples/TRNG/: main.c
lib/sdk/Applications/EvKitExamples/USB_CDCACM/: Makefile
lib/sdk/Applications/EvKitExamples/USB_CompositeDevice/: descriptors.h  main.c
lib/sdk/Applications/EvKitExamples/USB_CompositeDevice_CDCACM/: .cproject  .project  descriptors.h  main.c
lib/sdk/Applications/EvKitExamples/USB_MassStorage/: Makefile
lib/sdk/Applications/EvKitExamples/USB_MassStorage_SDHC/: .cproject  .project  Makefile  USB_MassStorage.launch  main.c  mscmem.c  mscmem.h
lib/sdk/Applications/EvKitExamples/Watchdog/: main.c
lib/sdk/Documentation/html/: board_8h_source.html  dma_8h_source.html  gpio_8h_source.html  group__pwrseq.html  group__pwrseq.js  group__tmr.html  group__tmr__utils.html  lp_8h_source.html  menudata.js  mxc__device_8h_source.html  mxc__errors_8h_source.html  mxc__pins_8h_source.html  mxc__sys_8h_source.html  navtreedata.js  navtreeindex20.js  navtreeindex21.js  navtreeindex22.js  navtreeindex23.js  navtreeindex24.js  spi17y_8h_source.html  spi_8h_source.html  spixfc_8h_source.html  spixr_8h_source.html  tmr_8h_source.html  uart_8h_source.html
lib/sdk/Libraries/BTLE/: btle.mk  meson.build
lib/sdk/Libraries/Boards/BLEDemo_V1/: board.mk
lib/sdk/Libraries/Boards/EvKit_V1/: board.mk
lib/sdk/Libraries/Boards/FTHR/: board.mk
lib/sdk/Libraries/Boards/Include/: led.h  mx25.h  pb.h
lib/sdk/Libraries/Boards/MAX66900/: board.mk
lib/sdk/Libraries/Boards/ROM/: board.mk
lib/sdk/Libraries/Boards/Source/: led.c  mx25.c  pb.c  stdio.c
lib/sdk/Libraries/MAX32665PeriphDriver/: Makefile  periphdriver.mk
lib/sdk/Libraries/MAX32665PeriphDriver/Include/: adc.h  cipher.h  (+36 more)
lib/sdk/Libraries/MAXUSB/: Makefile  maxusb.mk
lib/sdk/NDALibraries/BTLE/: meson.build
preload/: menu.py
preload/apps/bhi160/: __init__.py  metadata.json
preload/apps/ble/: metadata.json
preload/apps/blinkisync-receive/: __init__.py  metadata.json
preload/apps/blinkisync-transmit/: __init__.py  metadata.json
preload/apps/ecg/: __init__.py  settings.py
pycardium/: main.c  meson.build  mpconfigport.h  mphalport.c
pycardium/modules/: bhi160-sys.c  machine_i2c.c  modmachine.c  os.c  qstrdefs.h  sys_display.c  sys_leds.c  utime.c
pycardium/modules/py/: bhi160.py  max30001.py  meson.build  simple_menu.py  smooth_vibrate.py
tools/: ecg-plot.py  ecg2wav.py  version-image.py
tools/bdf-to-stm/: Cargo.toml  README.md
tools/bdf-to-stm/src/: main.rs
tools/poor-profiler/: README.md  poor-collapse.sh  poor-profiler.sh
(+180 files in other folders)
