# Disabled due to meson bug in older version
# subdir('api-demo/')
subdir('bmatest/')
subdir('bmetest/')
subdir('dual-core/')
subdir('ecgtest/')
# Disabled due to meson bug in older version
# subdir('hello-freertos/')
subdir('hello-world/')
subdir('imutest/')
subdir('ips/')
subdir('bootloader-update/')
subdir('fundamental-test/')
# Disabled due to meson bug in older version
# subdir('upy-minimal/')
