includes = include_directories(
    'wsf/common/include',
    'wsf/common/include/util',
    'projects/ble-apps/ota-boot',
    'ble-profiles/sources/apps/dats',
    'ble-profiles/sources/apps/uribeacon',
    'ble-profiles/sources/apps',
    #'ble-profiles/sources/apps/tag',
    #'ble-profiles/sources/apps/medc',
    #'ble-profiles/sources/apps/meds',
    #'ble-profiles/sources/apps/hidapp',
    #'ble-profiles/sources/apps/watch',
    #'ble-profiles/sources/apps/datc',
    #'ble-profiles/sources/apps/gluc',
    #'ble-profiles/sources/apps/fit',
    #'ble-profiles/sources/apps/cycling',
    #'ble-profiles/sources/apps/sensor',
    'ble-profiles/sources/apps/app',
    'ble-profiles/sources/profiles',
    'ble-profiles/sources/profiles/include',
    #'ble-profiles/sources/profiles/htps',
    #'ble-profiles/sources/profiles/hid',
    #'ble-profiles/sources/profiles/wspc',
    #'ble-profiles/sources/profiles/hrpc',
    #'ble-profiles/sources/profiles/uribeacon',
    #'ble-profiles/sources/profiles/gap',
    #'ble-profiles/sources/profiles/glps',
    #'ble-profiles/sources/profiles/fmpl',
    #'ble-profiles/sources/profiles/anpc',
    #'ble-profiles/sources/profiles/wsps',
    #'ble-profiles/sources/profiles/wdxc',
    #'ble-profiles/sources/profiles/htpc',
    #'ble-profiles/sources/profiles/hrps',
    #'ble-profiles/sources/profiles/plxpc',
    #'ble-profiles/sources/profiles/blpc',
    #'ble-profiles/sources/profiles/cscp',
    #'ble-profiles/sources/profiles/cpp',
    #'ble-profiles/sources/profiles/glpc',
    #'ble-profiles/sources/profiles/gatt',
    #'ble-profiles/sources/profiles/sensor',
    #'ble-profiles/sources/profiles/rscp',
    #'ble-profiles/sources/profiles/blps',
    #'ble-profiles/sources/profiles/plxps',
    #'ble-profiles/sources/profiles/dis',
    #'ble-profiles/sources/profiles/tipc',
    #'ble-profiles/sources/profiles/bas',
    #'ble-profiles/sources/profiles/udsc',
    #'ble-profiles/sources/profiles/scpps',
    #'ble-profiles/sources/profiles/include',
    #'ble-profiles/sources/profiles/wpc',
    #'ble-profiles/sources/profiles/paspc',
    #'ble-profiles/sources/profiles/wdxs',
    'ble-profiles/sources/services',
    'ble-profiles/include/app',
    'platform/common/include',
    'controller/sources/mac/cfg',
    'controller/sources/mac/include',
    'ble-host/sources/stack/hci',
    'ble-host/sources/stack/cfg',
    'ble-host/sources/hci/exactle',
    'ble-host/include'
)

sources = files(
    'wsf/baremetal/sources/wsf_msg.c',
    'wsf/baremetal/sources/wsf_efs.c',
    'wsf/baremetal/sources/wsf_queue.c',
    'wsf/baremetal/sources/wsf_timer.c',
    'wsf/baremetal/sources/wsf_cs.c',
    'wsf/baremetal/sources/wsf_buf.c',
    'wsf/baremetal/sources/wsf_os.c',
    #'wsf/baremetal/sources/wsf_trace.c',
    'wsf/baremetal/sources/wsf_assert.c',
    'wsf/common/sources/util/crc32.c',
    'wsf/common/sources/util/bstream.c',
    'wsf/common/sources/util/terminal.c',
    'wsf/common/sources/util/calc128.c',
    'wsf/common/sources/util/bda.c',
    'wsf/common/sources/util/wstr.c',
    'wsf/common/sources/util/print.c',
    #'projects/ble-apps/dats/stack_dats.c',
    #'projects/ble-apps/dats/main.c',
    #'projects/ble-apps/uribeacon/stack_uribeacon.c',
    #'projects/ble-apps/uribeacon/main.c',
    #'projects/ble-apps/tag/stack_tag.c',
    #'projects/ble-apps/tag/main.c',
    #'projects/ble-apps/medc/stack_medc.c',
    #'projects/ble-apps/medc/main.c',
    #'projects/ble-apps/meds/stack_meds.c',
    #'projects/ble-apps/meds/main.c',
    #'projects/ble-apps/hidapp/stack_hidapp.c',
    #'projects/ble-apps/hidapp/main.c',
    #'projects/ble-apps/watch/stack_watch.c',
    #'projects/ble-apps/watch/main.c',
    #'projects/ble-apps/datc/stack_datc.c',
    #'projects/ble-apps/datc/main.c',
    #'projects/ble-apps/fit/stack_fit.c',
    #'projects/ble-apps/fit/main.c',
    #'projects/ble-apps/cycling/stack_cycling.c',
    #'projects/ble-apps/cycling/main.c',
    #'projects/ble-apps/ota-boot/main.c',
    'ble-profiles/sources/apps/dats/dats_main.c',
    'ble-profiles/sources/apps/uribeacon/uribeacon_main.c',
    'ble-profiles/sources/apps/tag/tag_main.c',
    'ble-profiles/sources/apps/tag/tag_main_wdxs.c',
    'ble-profiles/sources/apps/medc/medc_htp.c',
    'ble-profiles/sources/apps/medc/medc_main.c',
    'ble-profiles/sources/apps/medc/medc_wsp.c',
    'ble-profiles/sources/apps/medc/medc_glp.c',
    'ble-profiles/sources/apps/medc/medc_hrp.c',
    'ble-profiles/sources/apps/medc/medc_plx.c',
    'ble-profiles/sources/apps/medc/medc_blp.c',
    'ble-profiles/sources/apps/meds/meds_wsp.c',
    'ble-profiles/sources/apps/meds/meds_main.c',
    'ble-profiles/sources/apps/meds/meds_blp.c',
    'ble-profiles/sources/apps/meds/meds_htp.c',
    'ble-profiles/sources/apps/meds/meds_plx.c',
    'ble-profiles/sources/apps/meds/meds_glp.c',
    'ble-profiles/sources/apps/hidapp/hidapp_main.c',
    'ble-profiles/sources/apps/watch/watch_main.c',
    # TODO: This file includes a file which is only in mbed os:
    # mbed-os/features/FEATURE_BLE/targets/TARGET_CORDIO/stack/ble-host/sources/stack/dm/dm_priv.h
    #'ble-profiles/sources/apps/datc/datc_main.c',
    'ble-profiles/sources/apps/gluc/gluc_main.c',
    'ble-profiles/sources/apps/fit/fit_main.c',
    'ble-profiles/sources/apps/cycling/cycling_main.c',
    'ble-profiles/sources/apps/sensor/sensor_main.c',
    'ble-profiles/sources/apps/app/app_disc.c',
    'ble-profiles/sources/apps/app/app_slave.c',
    'ble-profiles/sources/apps/app/app_master.c',
    'ble-profiles/sources/apps/app/app_master_ae.c',
    'ble-profiles/sources/apps/app/app_slave_leg.c',
    'ble-profiles/sources/apps/app/app_slave_ae.c',
    'ble-profiles/sources/apps/app/app_main.c',
    'ble-profiles/sources/apps/app/app_server.c',
    'ble-profiles/sources/apps/app/app_master_leg.c',
    'ble-profiles/sources/apps/app/common/app_db.c',
    'ble-profiles/sources/apps/app/common/app_ui.c',
    'ble-profiles/sources/apps/app/common/app_hw.c',
    'ble-profiles/sources/apps/app/app_terminal.c',
    'ble-profiles/sources/apps/wdxs/wdxs_oad.c',
    'ble-profiles/sources/profiles/htps/htps_main.c',
    'ble-profiles/sources/profiles/hid/hid_main.c',
    'ble-profiles/sources/profiles/wspc/wspc_main.c',
    'ble-profiles/sources/profiles/hrpc/hrpc_main.c',
    'ble-profiles/sources/profiles/uribeacon/uricfg_main.c',
    'ble-profiles/sources/profiles/gap/gap_main.c',
    'ble-profiles/sources/profiles/glps/glps_db.c',
    'ble-profiles/sources/profiles/glps/glps_main.c',
    'ble-profiles/sources/profiles/fmpl/fmpl_main.c',
    'ble-profiles/sources/profiles/anpc/anpc_main.c',
    'ble-profiles/sources/profiles/wsps/wsps_main.c',
    'ble-profiles/sources/profiles/wdxc/wdxc_ft.c',
    'ble-profiles/sources/profiles/wdxc/wdxc_main.c',
    'ble-profiles/sources/profiles/wdxc/wdxc_stream.c',
    'ble-profiles/sources/profiles/htpc/htpc_main.c',
    'ble-profiles/sources/profiles/hrps/hrps_main.c',
    'ble-profiles/sources/profiles/plxpc/plxpc_main.c',
    'ble-profiles/sources/profiles/blpc/blpc_main.c',
    'ble-profiles/sources/profiles/cscp/cscps_main.c',
    'ble-profiles/sources/profiles/cpp/cpps_main.c',
    'ble-profiles/sources/profiles/glpc/glpc_main.c',
    'ble-profiles/sources/profiles/gatt/gatt_main.c',
    'ble-profiles/sources/profiles/sensor/gyro_main.c',
    'ble-profiles/sources/profiles/sensor/temp_main.c',
    'ble-profiles/sources/profiles/rscp/rscps_main.c',
    'ble-profiles/sources/profiles/blps/blps_main.c',
    'ble-profiles/sources/profiles/plxps/plxps_db.c',
    'ble-profiles/sources/profiles/plxps/plxps_main.c',
    'ble-profiles/sources/profiles/dis/dis_main.c',
    'ble-profiles/sources/profiles/tipc/tipc_main.c',
    'ble-profiles/sources/profiles/bas/bas_main.c',
    'ble-profiles/sources/profiles/udsc/udsc_main.c',
    'ble-profiles/sources/profiles/scpps/scpps_main.c',
    'ble-profiles/sources/profiles/wpc/wpc_main.c',
    'ble-profiles/sources/profiles/paspc/paspc_main.c',
    'ble-profiles/sources/profiles/wdxs/wdxs_stream.c',
    'ble-profiles/sources/profiles/wdxs/wdxs_au.c',
    'ble-profiles/sources/profiles/wdxs/wdxs_phy.c',
    'ble-profiles/sources/profiles/wdxs/wdxs_ft.c',
    'ble-profiles/sources/profiles/wdxs/wdxs_dc.c',
    'ble-profiles/sources/profiles/wdxs/wdxs_main.c',
    'ble-profiles/sources/services/svc_gls.c',
    'ble-profiles/sources/services/svc_cps.c',
    'ble-profiles/sources/services/svc_time.c',
    'ble-profiles/sources/services/svc_wp.c',
    'ble-profiles/sources/services/svc_alert.c',
    'ble-profiles/sources/services/svc_rscs.c',
    'ble-profiles/sources/services/svc_hts.c',
    'ble-profiles/sources/services/svc_temp.c',
    'ble-profiles/sources/services/svc_core.c',
    'ble-profiles/sources/services/svc_hid.c',
    'ble-profiles/sources/services/svc_scpss.c',
    'ble-profiles/sources/services/svc_hrs.c',
    'ble-profiles/sources/services/svc_plxs.c',
    'ble-profiles/sources/services/svc_cscs.c',
    'ble-profiles/sources/services/svc_ipss.c',
    'ble-profiles/sources/services/svc_wdxs.c',
    'ble-profiles/sources/services/svc_uricfg.c',
    'ble-profiles/sources/services/svc_dis.c',
    'ble-profiles/sources/services/svc_px.c',
    'ble-profiles/sources/services/svc_batt.c',
    'ble-profiles/sources/services/svc_wss.c',
    'ble-profiles/sources/services/svc_gyro.c',
    'ble-profiles/sources/services/svc_bps.c',
    'platform/max32665/sources/ll_math.c',
    'ble-host/sources/stack/hci/hci_main.c',
    'ble-host/sources/hci/exactle/hci_vs.c',
    'ble-host/sources/hci/exactle/hci_cmd_enc.c',
    'ble-host/sources/hci/exactle/hci_evt.c',
    'ble-host/sources/hci/exactle/hci_cmd_ae.c',
    'ble-host/sources/hci/exactle/hci_cmd.c',
    'ble-host/sources/hci/exactle/hci_tr.c',
    'ble-host/sources/hci/exactle/hci_cmd_phy.c',
    'ble-host/sources/hci/exactle/hci_cmd_master_ae.c',
    'ble-host/sources/hci/exactle/hci_core_ps.c',
    'ble-host/sources/hci/exactle/hci_cmd_master.c',
    'ble-host/sources/hci/exactle/hci_vs_ae.c',
)

lib = static_library(
  'btle',
  sources,
  include_directories: includes,
  dependencies: periphdriver,
  c_args: '-w',
)

btle = declare_dependency(
  include_directories: includes,
  link_with: lib,
  dependencies: periphdriver,
)
